# mdd

./: Cargo copy.toml  Cargo.toml  LICENSE  diesel.toml
migrations/2024-11-30-210603_user/: up.sql
public/: users.json
src/: lib.rs  main.rs
src/features/: mod.rs
src/features/_server/: mod.rs
src/features/_virus/: component.rs
src/features/builder/: component.rs  mod.rs  validator_pattern.rs  validator_range.rs
src/features/bytes/: from_bytes.rs  mod.rs  to_bytes.rs
src/features/getters/: get.rs  get_mut.rs  get_ref.rs  mod.rs
src/features/hexadecimal/: from_hex.rs  mod.rs  to_hex.rs
src/features/json/: from_json.rs  to_json.rs
src/features/logging/: mod.rs  print.rs  print_by_field.rs  printers_critical_by_field.rs  printers_err_by_field.rs  printers_info_by_field.rs  printers_panic_by_field.rs  printers_rust_by_field.rs  printers_success_by_field.rs  printers_warning_by_field.rs
src/features/math/: component.rs
src/features/observer/: component.rs
src/features/setters/: set.rs
src/features/to/: get_to.rs  mod.rs  to_arc.rs  to_arc_mutex.rs  to_arc_tokio_mutex.rs  to_box.rs  to_btreemap.rs  to_btreeset.rs  to_cow.rs  to_hashmap.rs  to_hashset.rs  to_linked_hashmap.rs  to_mutex.rs  to_rc.rs  to_rc_weak.rs  to_ref_cell.rs  to_tuple.rs  to_vec.rs  to_vec_tuples.rs
src/features/tokio/: mod.rs  to_spawn.rs
src/helpers/: add_traits_to_generics.rs  get_attr.rs  mod.rs
tests/: bincode.rs  builder.rs  discount.rs  disk.rs  divide.rs  inflate.rs  json.rs  multiply.rs  observer.rs  setters_and_getters.rs  subtract.rs  sum.rs  to.rs
(+16 files in other folders)
